update script, requirements and documentation for updatereminder.py

--- a/records_due.tmpl
+++ b/records_due.tmpl
@@ -1,12 +1,12 @@
-Subject: Metadata records due an update - {{settings["system/site/organization"]}}, {{settings["system/site/name"]}}.
+Subject: Metadata record due an update - {{settings["system/site/organization"]}}, {{settings["system/site/name"]}}.
 
-Dear {{user.contact}}
+Dear {{user.contact}},
 
-The following metadata records are due for review, please login and check them, and mark as updated:
+The following metadata record is due for review, please login and check it, and mark as updated:
 
-{{user.title}} {{user.link}}
+UUID: {{user.uuid}}
+Title: {{user.title}}
+Direct URL: {{user.link}}
 
 Regards,
-
 Metadata Team.
-
