--- a/records_overdue.tmpl
+++ b/records_overdue.tmpl
@@ -1,11 +1,12 @@
-Subject: Metadata records overdue an update - {{settings["system/site/organization"]}}, {{settings["system/site/name"]}}.
+Subject: Metadata record overdue an update - {{settings["system/site/organization"]}}, {{settings["system/site/name"]}}.
 
-Dear {{user.contact}}
+Dear {{user.contact}},
 
-The following metadata records are overdue for review, please login and check them, and mark as updated:
+The following metadata record is overdue for review, please login and check it, and mark as updated:
 
-{{user.title}} {{user.link}}
+UUID: {{user.uuid}}
+Title: {{user.title}}
+Direct URL: {{user.link}}
 
 Regards,
-
 Metadata Team.
